Final Commit for HW3. Reworked question#3 and made final check and formatting changes.

--- a/p8105_hw3_sz2800.md
+++ b/p8105_hw3_sz2800.md
@@ -34,11 +34,14 @@ library (p8105.datasets)
 data("instacart")
 ```
 
-The dimension of instacart is 1384617, 15 with 1384617 observations and
-the following key variables: order\_id, product\_id,
-add\_to\_cart\_order, reordered, user\_id, eval\_set, order\_number,
-order\_dow, order\_hour\_of\_day, days\_since\_prior\_order,
-product\_name, aisle\_id, department\_id, aisle, department.
+Instacart is an online grocery service that allows people to shop online
+from local stores. The dimension of instacart dataset is 1384617, 15
+with 1384617 observations and the following key variables: order\_id,
+product\_id, add\_to\_cart\_order, reordered, user\_id, eval\_set,
+order\_number, order\_dow, order\_hour\_of\_day,
+days\_since\_prior\_order, product\_name, aisle\_id, department\_id,
+aisle, department. The fifth order of the dataset is “Lightly Smoked
+Sardines in Olive Oil”, in the aisle: Canned Meat and Seafoods.
 
 ``` r
 count = instacart %>%
@@ -81,6 +84,252 @@ aisles_tables = instacart %>%
 
     ## Selecting by pop_count
 
+``` r
+knitr::kable(aisles_tables,
+             format = "html",
+             digits = 0,
+             caption = "Three most popular items from baking ingredients, dog food care, packaged vegetables fruits")
+```
+
+<table>
+
+<caption>
+
+Three most popular items from baking ingredients, dog food care,
+packaged vegetables fruits
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+aisle
+
+</th>
+
+<th style="text-align:left;">
+
+product\_name
+
+</th>
+
+<th style="text-align:right;">
+
+pop\_count
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+baking ingredients
+
+</td>
+
+<td style="text-align:left;">
+
+Cane Sugar
+
+</td>
+
+<td style="text-align:right;">
+
+336
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+baking ingredients
+
+</td>
+
+<td style="text-align:left;">
+
+Light Brown Sugar
+
+</td>
+
+<td style="text-align:right;">
+
+499
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+baking ingredients
+
+</td>
+
+<td style="text-align:left;">
+
+Pure Baking Soda
+
+</td>
+
+<td style="text-align:right;">
+
+387
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+dog food care
+
+</td>
+
+<td style="text-align:left;">
+
+Organix Chicken & Brown Rice Recipe
+
+</td>
+
+<td style="text-align:right;">
+
+28
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+dog food care
+
+</td>
+
+<td style="text-align:left;">
+
+Small Dog Biscuits
+
+</td>
+
+<td style="text-align:right;">
+
+26
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+dog food care
+
+</td>
+
+<td style="text-align:left;">
+
+Snack Sticks Chicken & Rice Recipe Dog Treats
+
+</td>
+
+<td style="text-align:right;">
+
+30
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+packaged vegetables fruits
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Baby Spinach
+
+</td>
+
+<td style="text-align:right;">
+
+9784
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+packaged vegetables fruits
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Blueberries
+
+</td>
+
+<td style="text-align:right;">
+
+4966
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+packaged vegetables fruits
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Raspberries
+
+</td>
+
+<td style="text-align:right;">
+
+5546
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
 Table with mean hour of the day at which Pink Lady Apples and Coffee Ice
 Cream are ordered on each day of the week.
 
@@ -95,14 +344,188 @@ sweets = instacart %>%
     values_from = mean_time
   ) 
 
-knitr::kable(sweets, digits = 2)
+knitr::kable(sweets, 
+             format = "html",
+             digits = 2,
+             caption = "Average order time for Pink Lady Apples and Coffee Ice Cream")
 ```
 
-| product\_name      |        0 |        1 |       2 |        3 |       4 |        5 |             6 |
-| :----------------- | -------: | -------: | ------: | -------: | ------: | -------: | ------------: |
-| Coffee Ice Cream   |    13.77 |    14.32 |   15.38 |    15.32 |   15.22 |    12.26 |         13.83 |
-| Pink Lady Apples   |    13.44 |    11.36 |   11.70 |    14.25 |   11.55 |    12.78 |         11.94 |
-| Assumed, Sunday is | equivale | nt to ze | ro, and | Monday - | Saturda | y follws | sequentially. |
+<table>
+
+<caption>
+
+Average order time for Pink Lady Apples and Coffee Ice Cream
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+product\_name
+
+</th>
+
+<th style="text-align:right;">
+
+0
+
+</th>
+
+<th style="text-align:right;">
+
+1
+
+</th>
+
+<th style="text-align:right;">
+
+2
+
+</th>
+
+<th style="text-align:right;">
+
+3
+
+</th>
+
+<th style="text-align:right;">
+
+4
+
+</th>
+
+<th style="text-align:right;">
+
+5
+
+</th>
+
+<th style="text-align:right;">
+
+6
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+Coffee Ice Cream
+
+</td>
+
+<td style="text-align:right;">
+
+13.77
+
+</td>
+
+<td style="text-align:right;">
+
+14.32
+
+</td>
+
+<td style="text-align:right;">
+
+15.38
+
+</td>
+
+<td style="text-align:right;">
+
+15.32
+
+</td>
+
+<td style="text-align:right;">
+
+15.22
+
+</td>
+
+<td style="text-align:right;">
+
+12.26
+
+</td>
+
+<td style="text-align:right;">
+
+13.83
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Pink Lady Apples
+
+</td>
+
+<td style="text-align:right;">
+
+13.44
+
+</td>
+
+<td style="text-align:right;">
+
+11.36
+
+</td>
+
+<td style="text-align:right;">
+
+11.70
+
+</td>
+
+<td style="text-align:right;">
+
+14.25
+
+</td>
+
+<td style="text-align:right;">
+
+11.55
+
+</td>
+
+<td style="text-align:right;">
+
+12.78
+
+</td>
+
+<td style="text-align:right;">
+
+11.94
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+Assumed, Sunday is equivalent to zero, and Monday - Saturday follows
+sequentially.
 
 ## Q2 BRFSS
 
@@ -130,17 +553,141 @@ state_loca_02 = brfss %>%
   group_by (locationabbr) %>% 
   summarize(distinct_loca = n_distinct(locationdesc)) %>%
   filter (distinct_loca >= 7) 
-knitr::kable(state_loca_02, digits = 1)
+knitr::kable(state_loca_02, 
+             format = "html",
+             digits = 0,
+             caption = "States Observed at 7 more locations in 2002")
 ```
 
-| locationabbr | distinct\_loca |
-| :----------- | -------------: |
-| CT           |              7 |
-| FL           |              7 |
-| MA           |              8 |
-| NC           |              7 |
-| NJ           |              8 |
-| PA           |             10 |
+<table>
+
+<caption>
+
+States Observed at 7 more locations in 2002
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+locationabbr
+
+</th>
+
+<th style="text-align:right;">
+
+distinct\_loca
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+CT
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+FL
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+MA
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+NC
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+NJ
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+PA
+
+</td>
+
+<td style="text-align:right;">
+
+10
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
 
 ``` r
 state_loca_10 = brfss %>% 
@@ -148,26 +695,273 @@ state_loca_10 = brfss %>%
   group_by (locationabbr) %>% 
   summarize(distinct_loca = n_distinct(locationdesc)) %>%
   filter (distinct_loca >= 7) 
-knitr::kable(state_loca_10, digits = 1)
+knitr::kable(state_loca_10, 
+             format = "html",
+             digits = 0,
+             caption = "States Observed at 7 more locations in 2010")
 ```
 
-| locationabbr    |                                                                                                                                                                             distinct\_loca |
-| :-------------- | -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
-| CA              |                                                                                                                                                                                         12 |
-| CO              |                                                                                                                                                                                          7 |
-| FL              |                                                                                                                                                                                         41 |
-| MA              |                                                                                                                                                                                          9 |
-| MD              |                                                                                                                                                                                         12 |
-| NC              |                                                                                                                                                                                         12 |
-| NE              |                                                                                                                                                                                         10 |
-| NJ              |                                                                                                                                                                                         19 |
-| NY              |                                                                                                                                                                                          9 |
-| OH              |                                                                                                                                                                                          8 |
-| PA              |                                                                                                                                                                                          7 |
-| SC              |                                                                                                                                                                                          7 |
-| TX              |                                                                                                                                                                                         16 |
-| WA              |                                                                                                                                                                                         10 |
-| The states that | were observed at 7 or more locations are: CT, FL, MA, NC, NJ, PA. The states that are observed at 7 or more locations at 2010 are: CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA. |
+<table>
+
+<caption>
+
+States Observed at 7 more locations in 2010
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+locationabbr
+
+</th>
+
+<th style="text-align:right;">
+
+distinct\_loca
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+CA
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+CO
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+FL
+
+</td>
+
+<td style="text-align:right;">
+
+41
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+MA
+
+</td>
+
+<td style="text-align:right;">
+
+9
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+MD
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+NC
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+NE
+
+</td>
+
+<td style="text-align:right;">
+
+10
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+NJ
+
+</td>
+
+<td style="text-align:right;">
+
+19
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+NY
+
+</td>
+
+<td style="text-align:right;">
+
+9
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+OH
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+PA
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+SC
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+TX
+
+</td>
+
+<td style="text-align:right;">
+
+16
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+WA
+
+</td>
+
+<td style="text-align:right;">
+
+10
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+The states that were observed at 7 or more locations are: CT, FL, MA,
+NC, NJ, PA. The states that are observed at 7 or more locations at 2010
+are: CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA.
 
 Make a “spaghetti” plot of average data\_value over time within a state
 limited to only “Excellent” responses.
@@ -184,9 +978,9 @@ brfss_plot = ggplot(data = brfss_preplot, aes(x = year, y = mean_data, color = l
   labs(title = "Average Data value Over Time within a State", x = "Years", y = "Average Data", color = "States")
 ```
 
-Make a two-panel plot showing, for the years 2006, and 2010,
-distribution of data\_value for responses (“Poor” to “Excellent”) among
-locations in NY State.
+A two-panel plot for the years 2006, and 2010, showing distribution of
+data\_value for responses (“Poor” to “Excellent”) among locations in NY
+State.
 
 ``` r
 brfss_ny = brfss %>% 
@@ -209,16 +1003,18 @@ brfss_ny_plot = ggplot(data = brfss_ny, aes(x = response, y = data_value, color 
 Tidying Accel Dataset.
 
 ``` r
-accel = read_csv("./accel_data.csv") %>%
+accel = read_csv("./data/accel_data.csv") %>%
   janitor::clean_names() %>% 
-  mutate(day_week = ifelse(day %in% c("Saturday", "Sunday"), "weekend", "weekday")) %>% 
   pivot_longer(
     activity_1:activity_1440,
     names_to = "time_mins",
     names_prefix = "activity_",
     values_to = "activity"
   ) %>%
-  mutate(time_mins = as.numeric(time_mins))
+  mutate(time_hour = ceiling(as.numeric(time_mins)/60)) %>% 
+  mutate(day_week = ifelse(day %in% c("Saturday", "Sunday"), "weekend", "weekday")) %>% 
+  mutate(day = as.factor(day), 
+         day = forcats::fct_relevel(day, c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday")))
 ```
 
     ## Parsed with column specification:
@@ -228,6 +1024,12 @@ accel = read_csv("./accel_data.csv") %>%
     ## )
 
     ## See spec(...) for full column specifications.
+
+In the accel dataset, the key variables are: week, day\_id, day,
+time\_mins, activity, time\_hour, day\_week with 50400 observations.
+Each observation is the activity per minute over the course of 5 weeks,
+of a 63 year old male, with BMI 25, diagnosed with congested heart
+failure.
 
 Aggregate accross minutes to create a total activity variable for each
 day.
@@ -240,59 +1042,1047 @@ accel_sum_table = accel %>%
 accel_sum_plot_1 = ggplot(accel_sum_table, aes(x = day_id, y = total_act)) +
   geom_line()
 
-knitr::kable(accel_sum_table, digits = 2)
+knitr::kable(accel_sum_table, 
+            format = "html",
+             digits = 2)
 ```
 
-| day       | day\_id | total\_act | avg\_act |
-| :-------- | ------: | ---------: | -------: |
-| Friday    |       1 |  480542.62 |   333.71 |
-| Friday    |       8 |  568839.00 |   395.03 |
-| Friday    |      15 |  467420.00 |   324.60 |
-| Friday    |      22 |  154049.00 |   106.98 |
-| Friday    |      29 |  620860.00 |   431.15 |
-| Monday    |       2 |   78828.07 |    54.74 |
-| Monday    |       9 |  295431.00 |   205.16 |
-| Monday    |      16 |  685910.00 |   476.33 |
-| Monday    |      23 |  409450.00 |   284.34 |
-| Monday    |      30 |  389080.00 |   270.19 |
-| Saturday  |       3 |  376254.00 |   261.29 |
-| Saturday  |      10 |  607175.00 |   421.65 |
-| Saturday  |      17 |  382928.00 |   265.92 |
-| Saturday  |      24 |    1440.00 |     1.00 |
-| Saturday  |      31 |    1440.00 |     1.00 |
-| Sunday    |       4 |  631105.00 |   438.27 |
-| Sunday    |      11 |  422018.00 |   293.07 |
-| Sunday    |      18 |  467052.00 |   324.34 |
-| Sunday    |      25 |  260617.00 |   180.98 |
-| Sunday    |      32 |  138421.00 |    96.13 |
-| Thursday  |       5 |  355923.64 |   247.17 |
-| Thursday  |      12 |  474048.00 |   329.20 |
-| Thursday  |      19 |  371230.00 |   257.80 |
-| Thursday  |      26 |  340291.00 |   236.31 |
-| Thursday  |      33 |  549658.00 |   381.71 |
-| Tuesday   |       6 |  307094.24 |   213.26 |
-| Tuesday   |      13 |  423245.00 |   293.92 |
-| Tuesday   |      20 |  381507.00 |   264.94 |
-| Tuesday   |      27 |  319568.00 |   221.92 |
-| Tuesday   |      34 |  367824.00 |   255.43 |
-| Wednesday |       7 |  340115.01 |   236.19 |
-| Wednesday |      14 |  440962.00 |   306.22 |
-| Wednesday |      21 |  468869.00 |   325.60 |
-| Wednesday |      28 |  434460.00 |   301.71 |
-| Wednesday |      35 |  445366.00 |   309.28 |
+<table>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+day
+
+</th>
+
+<th style="text-align:right;">
+
+day\_id
+
+</th>
+
+<th style="text-align:right;">
+
+total\_act
+
+</th>
+
+<th style="text-align:right;">
+
+avg\_act
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:right;">
+
+78828.07
+
+</td>
+
+<td style="text-align:right;">
+
+54.74
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+9
+
+</td>
+
+<td style="text-align:right;">
+
+295431.00
+
+</td>
+
+<td style="text-align:right;">
+
+205.16
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+16
+
+</td>
+
+<td style="text-align:right;">
+
+685910.00
+
+</td>
+
+<td style="text-align:right;">
+
+476.33
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+23
+
+</td>
+
+<td style="text-align:right;">
+
+409450.00
+
+</td>
+
+<td style="text-align:right;">
+
+284.34
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+30
+
+</td>
+
+<td style="text-align:right;">
+
+389080.00
+
+</td>
+
+<td style="text-align:right;">
+
+270.19
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+6
+
+</td>
+
+<td style="text-align:right;">
+
+307094.24
+
+</td>
+
+<td style="text-align:right;">
+
+213.26
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+13
+
+</td>
+
+<td style="text-align:right;">
+
+423245.00
+
+</td>
+
+<td style="text-align:right;">
+
+293.92
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+20
+
+</td>
+
+<td style="text-align:right;">
+
+381507.00
+
+</td>
+
+<td style="text-align:right;">
+
+264.94
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+27
+
+</td>
+
+<td style="text-align:right;">
+
+319568.00
+
+</td>
+
+<td style="text-align:right;">
+
+221.92
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+34
+
+</td>
+
+<td style="text-align:right;">
+
+367824.00
+
+</td>
+
+<td style="text-align:right;">
+
+255.43
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+7
+
+</td>
+
+<td style="text-align:right;">
+
+340115.01
+
+</td>
+
+<td style="text-align:right;">
+
+236.19
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+14
+
+</td>
+
+<td style="text-align:right;">
+
+440962.00
+
+</td>
+
+<td style="text-align:right;">
+
+306.22
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+21
+
+</td>
+
+<td style="text-align:right;">
+
+468869.00
+
+</td>
+
+<td style="text-align:right;">
+
+325.60
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+28
+
+</td>
+
+<td style="text-align:right;">
+
+434460.00
+
+</td>
+
+<td style="text-align:right;">
+
+301.71
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+35
+
+</td>
+
+<td style="text-align:right;">
+
+445366.00
+
+</td>
+
+<td style="text-align:right;">
+
+309.28
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:right;">
+
+355923.64
+
+</td>
+
+<td style="text-align:right;">
+
+247.17
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+<td style="text-align:right;">
+
+474048.00
+
+</td>
+
+<td style="text-align:right;">
+
+329.20
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+19
+
+</td>
+
+<td style="text-align:right;">
+
+371230.00
+
+</td>
+
+<td style="text-align:right;">
+
+257.80
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+26
+
+</td>
+
+<td style="text-align:right;">
+
+340291.00
+
+</td>
+
+<td style="text-align:right;">
+
+236.31
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+33
+
+</td>
+
+<td style="text-align:right;">
+
+549658.00
+
+</td>
+
+<td style="text-align:right;">
+
+381.71
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+480542.62
+
+</td>
+
+<td style="text-align:right;">
+
+333.71
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+8
+
+</td>
+
+<td style="text-align:right;">
+
+568839.00
+
+</td>
+
+<td style="text-align:right;">
+
+395.03
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+15
+
+</td>
+
+<td style="text-align:right;">
+
+467420.00
+
+</td>
+
+<td style="text-align:right;">
+
+324.60
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+22
+
+</td>
+
+<td style="text-align:right;">
+
+154049.00
+
+</td>
+
+<td style="text-align:right;">
+
+106.98
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+29
+
+</td>
+
+<td style="text-align:right;">
+
+620860.00
+
+</td>
+
+<td style="text-align:right;">
+
+431.15
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:right;">
+
+376254.00
+
+</td>
+
+<td style="text-align:right;">
+
+261.29
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+10
+
+</td>
+
+<td style="text-align:right;">
+
+607175.00
+
+</td>
+
+<td style="text-align:right;">
+
+421.65
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+17
+
+</td>
+
+<td style="text-align:right;">
+
+382928.00
+
+</td>
+
+<td style="text-align:right;">
+
+265.92
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+24
+
+</td>
+
+<td style="text-align:right;">
+
+1440.00
+
+</td>
+
+<td style="text-align:right;">
+
+1.00
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+31
+
+</td>
+
+<td style="text-align:right;">
+
+1440.00
+
+</td>
+
+<td style="text-align:right;">
+
+1.00
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:right;">
+
+631105.00
+
+</td>
+
+<td style="text-align:right;">
+
+438.27
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+11
+
+</td>
+
+<td style="text-align:right;">
+
+422018.00
+
+</td>
+
+<td style="text-align:right;">
+
+293.07
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+18
+
+</td>
+
+<td style="text-align:right;">
+
+467052.00
+
+</td>
+
+<td style="text-align:right;">
+
+324.34
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+25
+
+</td>
+
+<td style="text-align:right;">
+
+260617.00
+
+</td>
+
+<td style="text-align:right;">
+
+180.98
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+32
+
+</td>
+
+<td style="text-align:right;">
+
+138421.00
+
+</td>
+
+<td style="text-align:right;">
+
+96.13
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
 
 There is no trend between total activity and days. There is no uniform
 decrease or uniform increase in the activities as the days passes.
 
-Plot of daily activities across days of the
-week.
+Plot of daily activities across days of the week.
 
 ``` r
-accel_sum_plot_2 = ggplot(accel_sum_table, aes(x = day_id, y = total_act, color = day)) +
+accel_sum_hour = accel %>% 
+  group_by(day, time_hour) %>% 
+  summarize(total_act = sum(activity, na.rm = TRUE), avg_act = mean(activity,  na.rm = TRUE))
+
+accel_sum_plot_2 = ggplot(accel_sum_hour, aes(x = time_hour, y = total_act, color = day)) +
   geom_smooth() +
-  labs(x = "Day", y = "Total Activity", title = "Daily Activity across 35 Days", color = "Day of the Week")
+  labs(x = "Time (Hours)", y = "Total Activity", title = "Daily Activity across Days of the Weeks", color = "Day of the Week") +
+  xlim(1, 24)
 ```
 
-There is no general trend in the activity as the days increase, and
-there is no uniform increase of decrease in activity between the
-different days of the week.
+Based on the graph, it looks like Sunday shows the largest differences
+in activity. In general, activity increase from 1-10 hours then plateaus
+and decreases by the 20th hour.
